--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-# REACT_APP_URL=http://localhost:8000/
-REACT_APP_URL=http://192.168.1.232:8000/
+REACT_APP_URL=http://localhost:8000/api/
+
+# to run the when it is local and docker
+# REACT_APP_URL=http://192.168.1.232:8000/
+
+# to run on the Lightsail
+# REACT_APP_URL=/api/
