--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# REACT_APP_URL=http://localhost:8000/api/
+REACT_APP_URL=http://localhost:8000/api/
 
-# to run the when it is local and docker
-# REACT_APP_URL=http://192.168.1.232:8000/
+# to run the when local and frontend is in a docker container
+# REACT_APP_URL=http://192.168.1.232:8000/api/
 
 # to run on the Lightsail
-REACT_APP_URL=/api/
+# REACT_APP_URL=/api/
