finished logistics dashboard

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ REACT_APP_URL=http://localhost:8000/api/
 
 # to run on the Lightsail
 # REACT_APP_URL=/api/
+
+
+REACT_APP_LOGISTICS_END_DATE=2025-01-01
+REACT_APP_LOGISTICS_START_DATE=2023-07-09
